crates/board-tui/tests/snapshots/snapshots__archived_cards_only.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 120, 35)"
---
" ◈ herdr-board ● 1 running          [ Global ▾ ]                   [ main ▾ ]            [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ EXECUTE · AUTO · 0 ────────┐┌ REVIEW · AUTO · 0 ─────────┐┌ HUMAN REVIEW · MANUAL · 0 ─┐┌ DONE · MANUAL · 1 ─────────┐"
"│                            ││                            ││                            ││┌──────────────────────────┐│"
"│                            ││                            ││                            │││#7 Ship v0.1              ││"
"│                            ││                            ││                            │││▣ archived                ││"
"│                            ││                            ││                            │││claude                    ││"
"│                            ││                            ││                            ││└──────────────────────────┘│"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
