crates/board-tui/tests/snapshots/snapshots__awaiting_card_detail_120x35.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: output
---
" ◈ herdr-board ● 1 running          [ Global ▾ ]                   [ main ▾ ]            [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ─────────┐┌ PLAN · AUTO · 1 ───────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"┌ Card #6: Tune retry backoff                                                                               [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││? awaiting (agent reported done)                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Harness · Model: claude · default model · effort default effort · perm default permission                           ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Herdr session: default session · Space: workspace:-                                                                 ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Description─────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││Tune the backoff constants based on the new metrics.                                                                ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"││                                                                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│        [ Edit card ]              [ Duplicate card ]             [ Archive card ]             [ Confirm done ]       │"
"│┌Comments────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││                                                  [ Add comment ]                                                   ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌Runs────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│"
"││      [ Open worker ]           [ Reopen conversation ]             [ Retry ]                    [ Cancel ]         ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
