crates/board-tui/tests/snapshots/snapshots__awaiting_idle_detail.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: output
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ Card #9: Silent agent                                             [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────────────────────────────────┐│"
"││? awaiting (idle timeout)                                                   ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────────────────────────────────┐│"
"││Harness · Model: claude · default model · effort default effort · perm      ││"
"││default permission                                                          ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────────────────────────────────┐│"
"││Herdr session: default session · Space: workspace:-                         ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│   [ Edit card ]    [ Duplicate card ]   [ Archive card ]   [ Confirm done ]  │"
"│┌Comments────────────────────────────────────────────────────────────────────┐│"
"││                              [ Add comment ]                               ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Runs────────────────────────────────────────────────────────────────────────┐│"
"││ [ Open worker ]       [ Reopen ]          [ Retry ]          [ Cancel ]    ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
