crates/board-tui/tests/snapshots/snapshots__board_picker_120x35.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut wide, 120, 35)"
---
" ◈ herdr-board ● 1 running                         [ Global ▾ ]                          [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ─────────┐┌ PLAN · AUTO · 1 ───────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"│┌──────────────────────────┐││┌──────────────────────────┐││┌──────────────────────────┐││┌──────────────────────────┐│"
"││#1 Update docs            ││││#2 Add retry to MELI scra…││││#3 Fix flaky test         ││││#5 Refactor auth module   ││"
"││· idle                    ││││▶ running · 2m0s          ││││⧗ queued                  ││││✗ failed                  ││"
"││claude                    ││││claude · eff: high        ││││claude                    ││││claude · eff: medium      ││"
"│└──────────────────────────┘││└──────────────────────────┘││└──────────────────────────┘││└──────────────────────────┘│"
"│                            ││                            ││┌──────────────────────────┐││┌──────────────────────────┐│"
"│                            ││                            │││#4 Investigate crash      ││││#6 Tune retry backoff     ││"
"│                            ││                            │││⏸ blocked                 ││││? awaiting                ││"
"│                            ││                            │││claude                    ││││claude                    ││"
"│                            ││                            ││└──────────────────────────┘││└──────────────────────────┘│"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││          ┌ Switch board ────────────────[ X ]─┐          ││                            │"
"│                            ││          │›Global                             │          ││                            │"
"│                            ││          │ project — /Volumes/archive/project │          ││                            │"
"│                            ││          │ project — /work/alpha/project      │          ││                            │"
"│                            ││          └────────────────────────────────────┘          ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
