crates/board-tui/tests/snapshots/snapshots__board_picker_compact_40x20.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: output
---
"[ Project: Gl… ] [ Act ] [ All ] [ Arc ]"
"            [ Board: main ]             "
"[ ‹ ] [ Todo (M) · 1/6 · 1 cards ] [ › ]"
"────────────────────────────────────────"
"┌ Switch board ──────────────────[ X ]─┐"
"│›main                                 │"
"│ ⇄ Other projects…                    │"
"│ ＋ New board                         │" Hidden by multi-width symbols: [(3, " ")]
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│ v:cycle a:archive r:restore [ACTIVE] │"
"└──────────────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] "
"[ + Column ]  [ Edit col ]  [ Del col ] "
"[ Move col ]  [ Template ]  [ ? Help ]  "
