crates/board-tui/tests/snapshots/snapshots__card_detail.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: "render(&mut d, 80, 24)"
---
" ◈ herdr-board ● 1 running [ Glo… ▾ ][ main ▾ ]  [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────"
"┌ Card #5: Refactor auth module                                     [ X ] [ □ ]┐"
"│┌Status──────────────────────────────────────────────────────────────────────┐│"
"││✗ failed                                                                    ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Task Configuration──────────────────────────────────────────────────────────┐│"
"││Harness · Model: claude · opus · effort medium · perm plan                  ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Session─────────────────────────────────────────────────────────────────────┐│"
"││Herdr session: default session · Space: workspace:-                         ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│      [ Edit card ]           [ Duplicate card ]         [ Archive card ]     │"
"│┌Comments ↑──────────────────────────────────────────────────────────────────┐│"
"││ [agent:2] Reviewer: tests missing for token refresh                        ││"
"││▸[system] Refactor failed in 3m10s -> Execute                               ││"
"││ [ Add comment ]    [ Edit comment ]   [ Delete comment ]     [ History ]   ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Runs ↑──────────────────────────────────────────────────────────────────────┐│"
"││ [ Open worker ]       [ Reopen ]          [ Retry ]          [ Cancel ]    ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [ + New card ]  [ Open card ]  [ Archive card ][ + New column ][ Edit column ] "
" [ Delete column ]    [ Move column ]       [ Template ]         [ ? Help ]     "
